--- a/Selecting by Ids class/index.html
+++ b/Selecting by Ids class/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <div class="box">Bhupendra Jogi</div>
-        <div class="box">Bhupendra Jogi</div>
-        <div class="box">Bhupendra Jogi</div>
-        <div class="box">Bhupendra Jogi</div>
-        <div class="box">Bhupendra Jogi</div>
+        <div id="one" class="box">Bhupendra Jogi 1</div>
+        <div id="two" class="box">Bhupendra Jogi 2</div>
+        <div class="box">Bhupendra Jogi 3</div>
+        <div class="box">Bhupendra Jogi 4</div>
+        <div class="box">Bhupendra Jogi 5</div>
     </div>
     <script src="index.js"></script>
 </body>
